Revert "Try to fix layout shift"
This reverts commit efbc5e5d2a572bc0d2efce743afb72c843a4ae34.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,6 @@
 /* header and nav layout */
 header {
   height: var(--nav-height);
-  display: none;
 }
 
 header .header.block {
